[package]
name = "holon-tui"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "holon_tui"
path = "src/lib.rs"

[[bin]]
name = "holon-tui"
path = "src/main.rs"

[[test]]
name = "tui_ui_pbt"
path = "tests/tui_ui_pbt.rs"
harness = false

[dependencies]
# R3BL TUI Framework
r3bl_tui.workspace = true

# Holon workspace crates
holon.workspace = true
holon-frontend = { workspace = true, features = ["otel"] }
holon-api.workspace = true
holon-macros.workspace = true
holon-mcp = { path = "../mcp" }

# DI
fluxdi.workspace = true

# Async runtime
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time"] }
futures.workspace = true
futures-signals.workspace = true
async-trait.workspace = true

# Error handling
anyhow.workspace = true
miette.workspace = true

# Data handling
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
unicode-segmentation.workspace = true

# Logging
tracing.workspace = true
tracing-core.workspace = true
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[dev-dependencies]
holon-integration-tests = { path = "../../crates/holon-integration-tests" }
