[package]
name = "holon-waterui"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
# WaterUI framework
waterui = { git = "https://github.com/water-rs/waterui.git", branch = "dev" }
waterui-ffi = { git = "https://github.com/water-rs/waterui.git", branch = "dev" }

# Holon workspace crates
holon.workspace = true
holon-frontend.workspace = true
holon-api.workspace = true
holon-macros.workspace = true

# DI
fluxdi.workspace = true

# Serialization
serde_json.workspace = true

# Async runtime
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync"] }

# Error handling
anyhow.workspace = true

# Observability
tracing.workspace = true
tracing-subscriber.workspace = true
